# x-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.en.md  README.md  config.yaml  docker-compose.yml  pyproject.toml  pytest.ini
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
docs/: README.md  architecture.md  retrieval-pipeline.md
examples/: basic_rag.py  document_processing.py
scripts/: format.ps1  format.sh  start.ps1  start.sh  test.ps1  test.sh
src/: __init__.py  main.py
src/Repositories/: __init__.py  document_repository.py  vector_repository.py
src/api/: __init__.py  router.py
src/api/v1/: __init__.py  document.py  health.py  rag.py
src/chunking/: __init__.py  base.py  langchain_provider.py  llama_index_provider.py
src/common/: __init__.py  constants.py  responses.py  schemas.py
src/constants/: __init__.py  base.py  common.py  embedding.py  env.py  generation.py  log.py  rag.py  rate_limit.py  server.py  understanding.py  vector_store.py
src/core/: __init__.py  config.py  container.py  dependencies.py  exceptions.py  logger.py  middleware.py  response.py  services.py
src/infras/: __init__.py
src/infras/document_store/: __init__.py  base.py  json_store.py
src/infras/embedding/: __init__.py  base.py  bge_model.py
src/infras/vector_store/: __init__.py  base.py  bm25_store.py  chroma.py
src/llms/: __init__.py  prompts.py  providers.py
src/models/: __init__.py  base.py  document.py  vector.py
src/rag/: __init__.py  augmentation.py  generation.py  indexing.py  pipeline.py  retrieval.py  storage.py
src/repositories/: __init__.py  bm25_repository.py  document_repository.py  vector_repository.py
src/repository/: __init__.py  base_repository.py  document_repository.py  vector_repository.py
src/retrieval/: __init__.py  pipeline.py
src/retrieval/candidate/: __init__.py  base.py  bm25_retrieval.py  keyword_retrieval.py  vector_retrieval.py
src/retrieval/ranking/: __init__.py  base.py  mmr.py  rrf.py  score_filter.py  semantic.py
src/retrieval/understanding/: __init__.py  base.py  entity.py  expansion.py  hyde.py  intent.py  preprocess.py  rewrite.py  subquery.py
src/schemas/: __init__.py  base.py  document.py  health.py  rag.py  responses.py
src/service/: __init__.py  base_service.py  generation_service.py  indexing_service.py  retrieval_service.py
src/services/: __init__.py  augmentation_service.py  base_service.py  document_service.py  generation_service.py  indexing_service.py  rag_service.py  retrieval_service.py
src/utils/: __init__.py  embedding.py  filters.py  index_optimizer.py  reranker.py  similarity.py  text_splitter.py
tests/: conftest.py
tests/api/: test_api.py
tests/integration/: test_repository.py
tests/unit/: test_semantic_splitter.py  test_similarity.py  test_text_splitter.py
